--- a/views/404.ejs
+++ b/views/404.ejs
@@ -5,8 +5,6 @@
     <title><%= title %></title>
 </head>
 <body>
-    <% include ./includes/navbar %>
-    <h1>This page is under construction</h1>
-    <% include ./includes/footer %>
+    <h1>404 - Not Found</h1>
 </body>
 </html>
