About page, updated 404 and changed style

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,12 +1,23 @@
-<div class="navbar-fixed">
-<nav>
-    <div class="nav-wrapper black">
-        <a href="/" class="brand-logo">Alee Productions</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="/projects">Projects</a></li>
-            <li><a href="/blog">Blog</a></li>
-            <li><a href="/about">About</a></li>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">Alee Productions</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/projects">Projects</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/blog">Blog</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/about">About</a>
+            </li>
         </ul>
     </div>
 </nav>
-</div>
