--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
     <% include ./includes/header %>
     <title><%= title %></title>
 </head>
+
 <body>
     <% include ./includes/navbar %>
-    <h1>This page is under construction</h1>
+    <div class="jumbotron special-color">
+        <h2 class="display-4">Hello! Welcome to Alee Productions.</h2>
+        <p class="lead">We are a very small produtions company.</p>
+        <hr class="my-4">
+        <p>If you want to know more about us click the button down below.</p>
+        <a class="btn btn-green btn-lg" href="/about" role="button">Learn more</a>
+    </div>
     <% include ./includes/footer %>
 </body>
+
 </html>
