--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <% include ./includes/header %>
     <title><%= title %></title>
 </head>
 <body>
-    <h1>404 - Not Found</h1>
+   <center>
+       <h1>404 - Not Found</h1>
+       <h2>Oops, seems like that page isn't found!</h2>
+       <h3>Return to <a href="/">homepage</a>?</h3>
+    </center>
+    <% include ./includes/footer %>
 </body>
 </html>
