--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,3 +1,7 @@
-<link href="https://fonts.googleapis.com/css?family=Play:400,700&display=swap" rel="stylesheet"> 
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+<!-- Bootstrap core CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+<!-- Material Design Bootstrap -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/css/mdb.min.css" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Play:400,700&display=swap" rel="stylesheet"> 
 <link rel="stylesheet" href="/css/style.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
