Added teams in about and some beautifying

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,10 +15,27 @@
     </div>
     <div class="container">
         <h1>History</h1>
-        <p>Alee Productions started in 2016. It used to be called "AleeCorp" and used to make just software but over time it started branching to other things like making games and videos. 
-            In late 2018, AleeCorp merged with Universe and some project merged but due to a community conflict during October in that year, Universe and AleeCorp splited. In 2019 however, AleeCorp renamed to Alee Productions just to make the company more professional.</p>
-    
-    </div>
+        <p>Alee Productions started in 2016. It used to be called "AleeCorp" and used to make just software but over
+            time it started branching to other things like making games and videos.
+            In late 2018, AleeCorp merged with Universe and some project merged but due to a community conflict during
+            October in that year, Universe and AleeCorp splited. In 2019 however, AleeCorp renamed to Alee Productions
+            just to make the company more professional.</p>
+        <h1>Team</h1>
+        <div class="card text-white success-color-dark mb-3" style="max-width: 20rem;">
+            <div class="card-body">
+                <h5 class="card-title">Community Team</h5>
+                <p class="card-text text-white">
+                    <ul>
+                        <li>Travis#1777 (Admin)</li>
+                        <li>Inkydink#9098 (Admin)</li>
+                        <li>The Pixel Polygon#2069 (Admin)</li>
+                        <li>Sylv#7596 (Moderator)</li>
+                        <li>jtsshieh#6424 (Moderator)</li>
+
+                    </ul>
+                </p>
+            </div>
+        </div>
     <% include ./includes/footer %>
 </body>
 
