--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,9 @@
 
 <body>
     <% include ./includes/navbar %>
-    <div class="jumbotron special-color">
+    <div class="jumbotron special-color bounceIn">
         <h2 class="display-4">Hello! Welcome to Alee Productions.</h2>
-        <p class="lead">We are a very small produtions company.</p>
+        <p class="lead">We are a very small productions company.</p>
         <hr class="my-4">
         <p>If you want to know more about us click the button down below.</p>
         <a class="btn btn-green btn-lg" href="/about" role="button">Learn more</a>
