--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <% include ./includes/header %>
     <title><%= title %></title>
 </head>
+
 <body>
     <% include ./includes/navbar %>
-   <center>
-       <h1>404 - Not Found</h1>
-       <h2>Oops, seems like that page isn't found!</h2>
-       <h3>Return to <a href="/">homepage</a>?</h3>
-    </center>
+    <div class="jumbotron special-color">
+        <h2 class="display-4">Projects</h2>
+        <p class="lead">This is the projects that we are currently working on.</p>
+    </div>
     <% include ./includes/footer %>
 </body>
+
 </html>
