--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -5,3 +5,6 @@
 <!-- Material Design Bootstrap -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/css/mdb.min.css" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Play:400,700&display=swap" rel="stylesheet"> 
 <link rel="stylesheet" href="/css/style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
