Favicons, updated homepage and more stuff

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="page-footer fixed-bottom font-small green">
-    <div class="footer-copyright text-center py-3">© Copyright 2019, Alee Productions. Powered by ExpressJS and EJS.</div>
+    <div class="footer-copyright text-center py-3">© Copyright 2016-2019, Alee Productions. Powered by ExpressJS and EJS.</div>
 </footer>
 <!-- JQuery -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
