--- a/views/about.ejs
+++ b/views/about.ejs
@@ -18,7 +18,7 @@
         <p>Alee Productions started in 2016. It used to be called "AleeCorp" and used to make just software but over
             time it started branching to other things like making games and videos.
             In late 2018, AleeCorp merged with Universe and some project merged but due to a community conflict during
-            October in that year, Universe and AleeCorp splited. In 2019 however, AleeCorp renamed to Alee Productions
+            October in that year, Universe and AleeCorp splited. In 2019 however, AleeCorp got renamed to Alee Productions
             just to make the company more professional.</p>
         <h1>Team</h1>
         <div class="card text-white success-color-dark mb-3" style="max-width: 20rem;">
