--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,11 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Alee Productions</a>
+    <a class="navbar-brand" href="/">
+        <img src="/img/ALP.png" height="30" class="d-inline-block align-top" alt="Alee Prod Logo">
+        Alee Productions</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-link" href="/">Home</a>
             </li>
