Added labels and fixed an issue

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,41 +22,53 @@
     <div class="container">
         <div class="row">
             <div class="col-sm">
-                <div class="view overlay">
-                    <a href="https://discord.gg/EFhRDqG">
-                        <img src="/img/users-solid.svg" class="svg-white" height=220px>
-                        <div class="mask flex-center rgba-green-strong">
-                            <p class="white-text">Community</p>
-                        </div>
-                    </a>
-                </div>
+                <center>
+                    <div class="view overlay">
+                        <a href="https://discord.gg/EFhRDqG">
+                            <img src="/img/users-solid.svg" class="svg-white" height=220px>
+                            <div class="mask flex-center rgba-green-strong">
+                                <p class="white-text">Community</p>
+                            </div>
+                        </a>
+                    </div>
+                    <br>
+                    Community
+                </center>
             </div>
             <div class="col-sm">
-                <div class="view overlay">
-                    <a href="https://www.youtube.com/channel/UC9CIwdleH3m_PV35QqULWzA">
-                        <img src="/img/video-solid.svg" class="svg-white" height=220px>
-                        <div class="mask flex-center rgba-green-strong">
-                            <p class="white-text">Video</p>
-                        </div>
-                    </a>
-                </div>
+                <center>
+                    <div class="view overlay">
+                        <a href="https://www.youtube.com/channel/UC9CIwdleH3m_PV35QqULWzA">
+                            <img src="/img/video-solid.svg" class="svg-white" height=220px>
+                            <div class="mask flex-center rgba-green-strong">
+                                <p class="white-text">Video</p>
+                            </div>
+                        </a>
+                    </div>
+                    <br>
+                    Video
+                </center>
             </div>
             <div class="col-sm">
-                <div class="view overlay">
-                    <a href="https://github.com/aleeproductions">
-                        <img src="/img/file-code-solid.svg" class="svg-white" height=220px>
-                        <div class="mask flex-center rgba-green-strong">
-                            <p class="white-text">Software</p>
-                        </div>
-                    </a>
-                </div>
+                <center>
+                    <div class="view overlay">
+                        <a href="https://github.com/aleeproductions">
+                            <img src="/img/file-code-solid.svg" class="svg-white" height=220px>
+                            <div class="mask flex-center rgba-green-strong">
+                                <p class="white-text">Software</p>
+                            </div>
+                        </a>
+                    </div>
+                    <br>
+                    Software
+                </center>
             </div>
         </div>
     </div>
-<script>
-    console.log("Welcome to Alee Productions :)")
-alert("Please note that this website is under active development and bugs may occur.\nIf there's any report it to the GitHub repo.")
-</script>
+    <script>
+        console.log("Welcome to Alee Productions :)")
+        alert("Please note that this website is under active development and bugs may occur.\nIf there's any report it to the GitHub repo.")
+    </script>
 
     <% include ./includes/footer %>
 </body>
