--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,3 +1,9 @@
+<!-- Meta -->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta name="description" content="We make games, video and software.">
+
 <!-- Favicons -->
 <link rel="apple-touch-icon" sizes="180x180" href="/ico/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/ico/favicon-32x32.png">
@@ -16,6 +22,5 @@
 <!-- Material Design Bootstrap -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/css/mdb.min.css" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Play:400,700&display=swap" rel="stylesheet"> 
 <link rel="stylesheet" href="/css/style.css">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+<title><%= title %></title>
