--- a/views/about.ejs
+++ b/views/about.ejs
@@ -17,8 +17,18 @@
         <p>Alee Productions started in 2016. It used to be called "AleeCorp" and used to make just software but over
             time it started branching to other things like making games and videos.
             In late 2018, AleeCorp merged with Universe and some project merged but due to a community conflict during
-            October in that year, Universe and AleeCorp splited. In 2019 however, AleeCorp got renamed to Alee Productions
+            October in that year, Universe and AleeCorp splited. In 2019 however, AleeCorp got renamed to Alee
+            Productions
             just to make the company more professional.</p>
+        <h1>FAQ</h1>
+        <ul style="list-style-type:none;">
+            <h4>
+                <li>Q: Why did you create Alee Productions?</li>
+                <li>A: Reason why I want to create this is because I want to make my own things as a passion also
+                    sharing
+                    it to the public and to make it as a career.</li>
+            </h4>
+        </ul>
         <h1>Team</h1>
         <div class="card text-white success-color-dark mb-3" style="max-width: 20rem;">
             <div class="card-body">
@@ -35,7 +45,7 @@
                 </p>
             </div>
         </div>
-    <% include ./includes/footer %>
+        <% include ./includes/footer %>
 </body>
 
 </html>
