Tweaking and changing README

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -32,7 +32,7 @@
         <h1>Team</h1>
         <div class="card text-white success-color-dark mb-3" style="max-width: 20rem;">
             <div class="card-body">
-                <h5 class="card-title">Community Team</h5>
+                <h5 class="card-title">Community Team (Discord)</h5>
                 <p class="card-text text-white">
                     <ul>
                         <li>Travis#1777 (Admin)</li>
