--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,6 +1,3 @@
-<footer class="page-footer fixed-bottom font-small green">
-    <div class="footer-copyright text-center py-3">© Copyright 2016-2019, Alee Productions. Powered by ExpressJS and EJS.</div>
-</footer>
 <!-- JQuery -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <!-- Bootstrap tooltips -->
@@ -10,3 +7,7 @@
 </script>
 <!-- MDB core JavaScript -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/js/mdb.min.js"></script>
+
+<footer class="page-footer fixed-bottom font-small green">
+        <div class="footer-copyright text-center py-3">© Copyright 2016-2019, Alee Productions. Powered by ExpressJS, EJS and Material Design Bootstrap.</div>
+</footer>
