Added the foundations for the blog, changed index and refactoring some code

--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -8,11 +8,12 @@
 <body>
     <% include ./includes/navbar %>
     <div class="jumbotron special-color">
-        <h2 class="display-4">Projects</h2>
-        <p class="lead">This is the projects that we are currently working on.</p>
+        <h2 class="display-4">Blog</h2>
+        <p class="lead">Where we post updates on products, this website and etc.</p>
     </div>
     <center><h1>Notice: We are currently working on this page</h1></center>
-    <% include ./includes/footer %>
+
+<% include ./includes/footer %>
 </body>
 
 </html>
