--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,8 +2,5 @@ body {
     font-family: Play, sans-serif;
     background-color: #212121;
     color: #ffffff;
-}
-
-.svg-white {
-    fill:#ffffff
+    margin-bottom: 100px;
 }
