--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Alee Productions Website: Made by Alee and licensed with GPL-3.0 -->
 <html>
 
 <head>
@@ -27,6 +28,9 @@
                 <li>A: Reason why I want to create this is because I want to make my own things as a passion also
                     sharing
                     it to the public and to make it as a career.</li>
+                <br>
+                <li>Q: Why did you call this Alee Productions?</li>
+                <li>A: As you know my name is Andrew Lee and my name starts with an "A" and combine it with "Lee" you get "Alee". :)</li>
             </h4>
         </ul>
         <h1>Team</h1>
@@ -45,6 +49,8 @@
                 </p>
             </div>
         </div>
+    </div>
+        <% include ./includes/scripts %>
         <% include ./includes/footer %>
 </body>
 
