--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Alee Productions Website: Made by Alee and licensed with GPL-3.0 -->
 <html>
 
 <head>
@@ -12,8 +13,8 @@
         <p class="lead">Where we post updates on products, this website and etc.</p>
     </div>
     <center><h1>Notice: We are currently working on this page</h1></center>
-
-<% include ./includes/footer %>
+    <% include ./includes/scripts %>
+    <% include ./includes/footer %>
 </body>
 
 </html>
