--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,5 +2,14 @@ body {
     font-family: Play, sans-serif;
     background-color: #212121;
     color: #ffffff;
-    margin-bottom: 100px;
+}
+
+ul.yt {
+    margin: 0 auto;
+    text-align: center;
+}
+
+li.yt-vid-list {
+    display: inline-block;
+    vertical-align: top;
 }
