--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Alee Productions Website: Made by Alee and licensed with GPL-3.0 -->
 <html>
 <head>
     <% include ./includes/header %>
@@ -10,6 +11,6 @@
        <h2>Oops, seems like that page isn't found!</h2>
        <h3>Return to <a href="/">homepage</a>?</h3>
     </center>
-    <% include ./includes/footer %>
+    <% include ./includes/scripts %>
 </body>
 </html>
