--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,13 +1,3 @@
-<!-- JQuery -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<!-- Bootstrap tooltips -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
-<!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js">
-</script>
-<!-- MDB core JavaScript -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/js/mdb.min.js"></script>
-
-<footer class="page-footer fixed-bottom font-small green">
+<footer class="page-footer mt-5 font-small green">
         <div class="footer-copyright text-center py-3">© Copyright 2016-2019, Alee Productions. Powered by ExpressJS, EJS and Material Design Bootstrap.</div>
 </footer>
