--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Alee Productions Website: Made by Alee and licensed with GPL-3.0 -->
 <html>
 
 <head>
@@ -17,26 +18,28 @@
     </div>
 
     <div class="container">
+        <center><h2>Our Products</h2></center>
         <!--Carousel Wrapper-->
-        <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
+        <div id="carousel-product" class="carousel slide carousel-slide" data-ride="carousel">
             <!--Indicators-->
             <ol class="carousel-indicators">
-                <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example-2" data-slide-to="1"></li>
-                <li data-target="#carousel-example-2" data-slide-to="2"></li>
+                <li data-target="#carousel-product" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-product" data-slide-to="1"></li>
+                <li data-target="#carousel-product" data-slide-to="2"></li>
             </ol>
             <!--/.Indicators-->
             <!--Slides-->
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
                     <div class="view">
-                        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(68).jpg"
+                        <img class="d-block w-100" src="/img/carousel/unicity.png"
                              alt="First slide">
                         <div class="mask rgba-black-light"></div>
                     </div>
                     <div class="carousel-caption">
-                        <h3 class="h3-responsive">Light mask</h3>
-                        <p>First text</p>
+                        <h3 class="h3-responsive">Unicity</h3>
+                        <p>A Sims clone written in Unity3D.</p>
+                        <a class="btn btn-green btn-lg" href="https://github.com/aleeproductions/Unicity/blob/master/README.md" role="button">Learn More</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -44,11 +47,12 @@
                     <div class="view">
                         <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg"
                              alt="Second slide">
-                        <div class="mask rgba-black-strong"></div>
+                        <div class="mask rgba-black-light"></div>
                     </div>
                     <div class="carousel-caption">
-                        <h3 class="h3-responsive">Strong mask</h3>
-                        <p>Secondary text</p>
+                        <h3 class="h3-responsive">QuantumNet</h3>
+                        <p>A computer "hacking" game made in C#.</p>
+                        <a class="btn btn-green btn-lg" href="https://github.com/aleeproductions/QuantumNet/blob/master/README.md" role="button">Learn More</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -56,21 +60,22 @@
                     <div class="view">
                         <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg"
                              alt="Third slide">
-                        <div class="mask rgba-black-slight"></div>
+                        <div class="mask rgba-black-light"></div>
                     </div>
                     <div class="carousel-caption">
                         <h3 class="h3-responsive">Slight mask</h3>
                         <p>Third text</p>
+                        <a class="btn btn-green btn-lg" href="#" role="button">Learn More</a>
                     </div>
                 </div>
             </div>
             <!--/.Slides-->
             <!--Controls-->
-            <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="#carousel-product" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
+            <a class="carousel-control-next" href="#carousel-product" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
@@ -128,7 +133,7 @@
         console.log("Welcome to Alee Productions :)");
         alert("Please note that this website is under active development and bugs may occur.\nIf there's any report it to the GitHub repo.");
     </script>
-
+    <% include ./includes/scripts %>
     <% include ./includes/footer %>
 </body>
 
