--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,7 +10,7 @@
     <% include ./includes/navbar %>
     <div class="jumbotron special-color">
         <h2 class="display-4">About Alee Productions</h2>
-        <p class="lead">Alee Productions is a productions company by Andrew Lee that focuses on making videos and games.
+        <p class="lead">Alee Productions is a productions company by Andrew Lee that focuses on making videos and software.
         </p>
     </div>
     <div class="container">
@@ -29,7 +29,7 @@
                     sharing
                     it to the public and to make it as a career.</li>
                 <br>
-                <li>Q: Why did you call this Alee Productions?</li>
+                <li>Q: Why did you call this productions company Alee Productions?</li>
                 <li>A: As you know my name is Andrew Lee and my name starts with an "A" and combine it with "Lee" you get "Alee". :)</li>
             </h4>
         </ul>
@@ -49,6 +49,8 @@
                 </p>
             </div>
         </div>
+        <h1>Credits</h1>
+        <p>This project is open source meaning that you can help <a href="https://github.com/aleeproductions/website">contribute</a> to this website.</p>
     </div>
         <% include ./includes/scripts %>
         <% include ./includes/footer %>
