--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
     </div>
 
     <div class="container">
-        <center><h2>Our Products</h2></center>
+        <h2 class="text-center mb-3">Our Products</h2>
         <!--Carousel Wrapper-->
         <div id="carousel-product" class="carousel slide carousel-slide" data-ride="carousel">
             <!--Indicators-->
@@ -84,23 +84,21 @@
         <!--/.Carousel Wrapper-->
         <br>
         <!--Community, Video and Software-->
-        <div class="row">
+        <!-- If anyone knows how to fix this please tell me thanks -Alee :)-->
+        <div class="row d-flex justify-content-center">
             <div class="col-sm">
-                <center>
                     <div class="view overlay">
                         <a href="https://discord.gg/EFhRDqG">
-                            <img src="/img/users-solid.svg" height=220px>
+                            <img class="text-center" src="/img/users-solid.svg" height=220px>
                             <div class="mask flex-center rgba-green-strong">
                                 <p class="white-text">Community</p>
                             </div>
                         </a>
                     </div>
                     <br>
-                    Community
-                </center>
+                <p class="text-center">Community</p>
             </div>
             <div class="col-sm">
-                <center>
                     <div class="view overlay">
                         <a href="https://www.youtube.com/channel/UC9CIwdleH3m_PV35QqULWzA">
                             <img src="/img/video-solid.svg" height=220px>
@@ -110,11 +108,9 @@
                         </a>
                     </div>
                     <br>
-                    Video
-                </center>
+                <p class="text-center">Video</p>
             </div>
             <div class="col-sm">
-                <center>
                     <div class="view overlay">
                         <a href="https://github.com/aleeproductions">
                             <img src="/img/file-code-solid.svg" height=220px>
@@ -124,8 +120,7 @@
                         </a>
                     </div>
                     <br>
-                    Software
-                </center>
+                   <p class="text-center">Software</p>
             </div>
         </div>
     </div>
