--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -13,7 +13,7 @@
         <p class="lead">This is the projects that we are currently working on.</p>
     </div>
     <div class="container">
-        <center><h1 class="mb-5">Software</h1></center>
+        <h1 class="mb-5 text-center">Software/Games</h1>
         <!-- Software Cards -->
     <div class="row d-flex justify-content-center">
 
@@ -38,7 +38,7 @@
         </div>
     </div>
         <!--/.Software Cards -->
-        <center><h1 class="mt-5 mb-5">Videos</h1></center>
+        <h1 class="mt-5 mb-5 text-center">Videos</h1>
         <ul id="yt-results" class="yt" style="list-style-type:none;"></ul>
     </div>
     <% include ./includes/scripts %>
