--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,3 +1,3 @@
 <footer class="page-footer mt-5 font-small green">
-        <div class="footer-copyright text-center py-3">© Copyright 2016-2019, Alee Productions. Powered by ExpressJS, EJS and Material Design Bootstrap.</div>
+        <div class="footer-copyright text-center py-3">© Copyright 2016-2019, Alee Productions. Licensed with GPL-3.0</div>
 </footer>
