Disabling listing videos for now

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -39,7 +39,8 @@
     </div>
         <!--/.Software Cards -->
         <h1 class="mt-5 mb-5 text-center">Videos</h1>
-        <ul id="yt-results" class="yt" style="list-style-type:none;"></ul>
+        <h2>Google API disabled for now....</h2>
+        <!--<ul id="yt-results" class="yt" style="list-style-type:none;"></ul>-->
     </div>
     <% include ./includes/scripts %>
     <script type="text/javascript" data-main="/js/yt-list-videos.js" src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
