--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,11 @@
     <% include ./includes/header %>
 </head>
 
-<body>
+<body class="dark">
     <% include ./includes/navbar %>
+    <div class="animsition">
     <!--Jumbotron-->
-    <div class="jumbotron special-color bounceIn">
+    <div class="jumbotron special-color bounceIn white-text">
         <h2 class="display-4">Hello! Welcome to Alee Productions.</h2>
         <p class="lead">We are a very small productions company.</p>
         <hr class="my-4">
@@ -126,10 +127,10 @@
     </div>
     <script>
         console.log("Welcome to Alee Productions :)");
-        alert("Please note that this website is under active development and bugs may occur.\nIf there's any report it to the GitHub repo.");
     </script>
     <% include ./includes/scripts %>
     <% include ./includes/footer %>
+    </div>
 </body>
 
 </html>
