--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -6,15 +6,17 @@
     <% include ./includes/header %>
 </head>
 
-<body>
+<body class="dark">
     <% include ./includes/navbar %>
+    <div class="animsition">
     <div class="jumbotron special-color">
         <h2 class="display-4">Blog</h2>
         <p class="lead">Where we post updates on products, this website and etc.</p>
     </div>
-    <center><h1>Notice: We are currently working on this page</h1></center>
+    <h1 class="text-center mt-5">Notice: We are currently working on this page</h1>
     <% include ./includes/scripts %>
     <% include ./includes/footer %>
+    </div>
 </body>
 
 </html>
