--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,3 +1,9 @@
 <footer class="page-footer mt-5 font-small green">
         <div class="footer-copyright text-center py-3">© Copyright 2016-2019, Alee Productions. Licensed with GPL-3.0</div>
 </footer>
+<div class="alert alert-warning fixed-bottom m-0 alert-dismissible fade show" role="alert">
+        Please note that this website is under active development and bugs may occur.<br>If there's any, report it to the <a href="https://github.com/aleeproductions/website">GitHub</a> repo.
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+        </button>
+</div>
