--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -2,7 +2,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="description" content="We make games, video and software.">
+<meta name="description" content="We make games, videos and software.">
 
 <!-- Favicons -->
 <link rel="apple-touch-icon" sizes="180x180" href="/ico/apple-touch-icon.png">
@@ -16,12 +16,16 @@
 <meta name="theme-color" content="#ffffff">
 
 <!-- Font Awesome -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+<script src="https://kit.fontawesome.com/4c90505fb4.js"></script>
 <!-- Bootstrap core CSS -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/bootstrap.min.css" rel="stylesheet">
 <!-- Material Design Bootstrap -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/css/mdb.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Play:400,700&display=swap" rel="stylesheet"> 
+<link href="/css/mdb.min.css" rel="stylesheet">
+<!-- Play -->
+<link href="https://fonts.googleapis.com/css?family=Play:400,700&display=swap" rel="stylesheet">
+<!-- animsition.css -->
+<link rel="stylesheet" href="/css/animsition.min.css">
+
 <link rel="stylesheet" href="/css/style.css">
 
 <title><%= title %></title>
