--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand animsition-link" href="/">
         <img src="/img/ALP.png" height="30" class="d-inline-block align-top" alt="Alee Prod Logo">
         Alee Productions</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -9,16 +9,31 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/">Home</a>
+                <a class="nav-link animsition-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/projects">Projects</a>
+                <a class="nav-link animsition-link" href="/projects">Projects</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">Community</a>
+                <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item animsition-link" href="/community/rules">Rules</a>
+                </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/blog">Blog</a>
+                <a class="nav-link animsition-link" href="/blog">Blog</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/about">About</a>
+                <a class="nav-link animsition-link" href="/about">About</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            <!--<li class="nav-item">
+                <a class="nav-link" onclick="toggle-theme">Dark</a>
+            </li>-->
+            <li class="nav-item">
+                <span class="navbar-text white-text">BETA</span>
             </li>
         </ul>
     </div>
