Added scss stuff

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
         <p class="lead">We are a very small productions company.</p>
         <hr class="my-4">
         <p>If you want to know more about us click the button down below.</p>
-        <a class="btn btn-green btn-lg" href="/about" role="button">Learn more</a>
+        <a class="btn btn-green btn-lg animsition-link" href="/about" role="button">Learn more</a>
     </div>
 
     <div class="container">
