--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,27 +1,24 @@
+/*
+   Please refrain from editing the style.css file and only edit the style.scss file.
+ */
 body {
-    font-family: Play, sans-serif;
-}
+  font-family: Play, sans-serif; }
 
 .dark {
-    background-color: #212121;
-    color: #ffffff;
-}
+  background-color: #212121;
+  color: #ffffff; }
 
 .light {
-    background-color: #ffffff;
-    color: #000000;
-}
+  background-color: #ffffff;
+  color: #000000; }
 
-ul.yt {
-    margin: 0 auto;
-    text-align: center;
-}
+ul .yt {
+  margin: 0 auto;
+  text-align: center; }
 
-li.yt-vid-list {
-    display: inline-block;
-    vertical-align: top;
-}
+ul .none {
+  list-style-type: none; }
 
-ul.none {
-    list-style-type:none;
-}
+li .yt-vid-list {
+  display: inline-block;
+  vertical-align: top; }
