Moved the community rules

--- a/views/community/rules.ejs
+++ b/views/community/rules.ejs
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <% include ./includes/header %>
+    <% include ../includes/header %>
     <style>
         .rules {
             font-size: 15pt;
@@ -19,7 +19,7 @@
 
 <body class="dark">
 <div id="top"></div>
-<% include ./includes/navbar %>
+<% include ../includes/navbar %>
 <div class="animsition">
     <h1 class="text-center display-5 mt-3">Alee Productions Community Rules</h1>
     <p class="text-center lead">Rules have been set in stone so we make sure that you can have a great time here.</p>
@@ -144,8 +144,8 @@
     </div>
     <a href="#top" class="green-text">Back to top</a>
 </div>
-<% include ./includes/scripts %>
-<% include ./includes/footer %>
+<% include ../includes/scripts %>
+<% include ../includes/footer %>
 </div>
 </body>
 
