--- a/views/about.ejs
+++ b/views/about.ejs
@@ -50,9 +50,11 @@
                 </p>
             </div>
         </div>
+        <div id="credits">
         <h1>Credits</h1>
         <p>Website is powered by Express.JS, EJS and Material Design Bootstrap.</p>
         <p>This project is open source meaning that you can help <a href="https://github.com/aleeproductions/website">contribute</a> to this website.</p>
+        </div>
     </div>
         <% include ./includes/scripts %>
         <% include ./includes/footer %>
