--- a/views/community/rules.ejs
+++ b/views/community/rules.ejs
@@ -28,8 +28,8 @@
 <div id="tiers">
 <h1>Tiers</h1>
     <ul class="none">
-        <li>Normal Tier - It means it is not too severe and it there’s nothing to worry about.</li>
-        <li>Excessive Tier - It means that if a rule is broken that’s severe it will be taken action immediately and will be stored in the punishment log.</li>
+        <li><a class="white-text" href="#normal-tier">Normal Tier</a> - It means it is not too severe and it there’s nothing to worry about.</li>
+        <li><a class="white-text" href="#excessive-tier">Excessive Tier</a> - It means that if a rule is broken that’s severe it will be taken action immediately and will be stored in the punishment log.</li>
     </ul>
 </div>
 <div id="normal-tier">
