--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -52,8 +52,10 @@
         </table>
     </div>
         <!--/.Software Cards -->
+        <!-- Disabled for now....
         <h1 class="mt-3 mb-2 text-center">Videos</h1>
         <ul id="yt-results" class="yt none"></ul>
+        -->
     </div>
     <% include ./includes/scripts %>
     <script>
