--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="page-footer mt-5 font-small green">
-        <div class="footer-copyright text-center py-3">© Copyright 2016-2019, Alee Productions. Licensed with GPL-3.0</div>
+        <div class="footer-copyright text-center py-3">© Copyright 2016-2019, Alee Productions Inc. Licensed with <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GPL-3.0</a> and view <a href="/about#credits">credits</a> to see how this website is built.</div>
 </footer>
 <div class="alert alert-warning fixed-bottom m-0 alert-dismissible fade show" role="alert">
         Please note that this website is under active development and bugs may occur.<br>If there's any, report it to the <a href="https://github.com/aleeproductions/website">GitHub</a> repo.
