--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,6 +15,47 @@
         </p>
     </div>
     <div class="container">
+        <!--Community, Video and Software-->
+        <!-- If anyone knows how to fix this please tell me thanks -Alee :)-->
+        <div class="row d-flex justify-content-center">
+            <div class="col-sm">
+                <div class="view overlay">
+                    <a href="https://discord.gg/EFhRDqG">
+                        <img class="text-center" src="/img/users-solid.svg" height=220px>
+                        <div class="mask flex-center rgba-green-strong">
+                            <p class="white-text">Community</p>
+                        </div>
+                    </a>
+                </div>
+                <br>
+                <p class="text-center">Community</p>
+            </div>
+            <div class="col-sm">
+                <div class="view overlay">
+                    <a href="https://www.youtube.com/channel/UC9CIwdleH3m_PV35QqULWzA">
+                        <img src="/img/video-solid.svg" height=220px>
+                        <div class="mask flex-center rgba-green-strong">
+                            <p class="white-text">Video</p>
+                        </div>
+                    </a>
+                </div>
+                <br>
+                <p class="text-center">Video</p>
+            </div>
+            <div class="col-sm">
+                <div class="view overlay">
+                    <a href="https://github.com/aleeproductions">
+                        <img src="/img/file-code-solid.svg" height=220px>
+                        <div class="mask flex-center rgba-green-strong">
+                            <p class="white-text">Software</p>
+                        </div>
+                    </a>
+                </div>
+                <br>
+                <p class="text-center">Software</p>
+            </div>
+        </div>
+
         <h1>History</h1>
         <p>Alee Productions started in 2016. It used to be called "AleeCorp" and used to make just software but over
             time it started branching to other things like making games and videos.
