--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -23,7 +23,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Unicity</h5>
                     <p class="card-text white-text">A Sims clone written in Unity3D.</p>
-                    <a class="card-link green-text" href="https://github.com/aleeproductions/Unicity"><i class="fab fa-github"></i> GitHub</a>
+                    <a class="card-link green-text" href="/projects/unicity">Learn more</a> <a class="card-link green-text" href="https://github.com/aleeproductions/Unicity"><i class="fab fa-github"></i> GitHub</a>
                 </div>
             </div>
         </div>
