Renamed the rules to ToS and rephrasing ToS

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,12 +14,8 @@
             <li class="nav-item">
                 <a class="nav-link animsition-link" href="/projects">Projects</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">Community</a>
-                <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item animsition-link" href="/community/rules">Rules</a>
-                </div>
+            <li class="nav-item">
+                <a class="nav-link animsition-link" href="/tos">ToS</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link animsition-link" href="/blog">Blog</a>
