--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,13 +9,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link animsition-link" href="/">Home</a>
+                <a class="nav-link " href="/">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link animsition-link" href="/projects">Projects</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link animsition-link" href="/tos">ToS</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link animsition-link" href="https://forums.alee-productions.xyz">Forums</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link animsition-link" href="/blog">Blog</a>
@@ -25,9 +28,38 @@
             </li>
         </ul>
         <ul class="navbar-nav">
-            <!--<li class="nav-item">
-                <a class="nav-link" onclick="toggle-theme">Dark</a>
-            </li>-->
+            <li class="nav-item">
+                <a class="nav-link animsition-link" href="https://github.com/aleeproductions">
+                    <i class="fab fa-github"></i> GitHub
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link animsition-link" href="https://git.alee-productions.xyz">
+                    <!-- <i class="fab fa-gitea"></i> --> Gitea
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link animsition-link" href="https://discord.gg/EFhRDqG">
+                    <i class="fab fa-discord"></i> Discord
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link animsition-link" href="https://www.reddit.com/r/aleeproductions/">
+                    <i class="fab fa-reddit"></i> Reddit
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link animsition-link" href="https://twitter.com/aleeproductions">
+                    <i class="fab fa-twitter"></i> Twitter
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link animsition-link" href="https://www.youtube.com/channel/UC9CIwdleH3m_PV35QqULWzA">
+                    <i class="fab fa-youtube"></i> YouTube
+                </a>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
             <li class="nav-item">
                 <span class="navbar-text white-text">BETA</span>
             </li>
