--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link " href="/">Home</a>
+                <a class="nav-link animsition-link" href="/">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link animsition-link" href="/projects">Projects</a>
@@ -19,6 +19,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link animsition-link" href="https://forums.alee-productions.xyz">Forums</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link animsition-link" href="https://git.alee-productions.xyz">Gitea</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link animsition-link" href="/blog">Blog</a>
@@ -31,11 +34,6 @@
             <li class="nav-item">
                 <a class="nav-link animsition-link" href="https://github.com/aleeproductions">
                     <i class="fab fa-github"></i> GitHub
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link animsition-link" href="https://git.alee-productions.xyz">
-                    <!-- <i class="fab fa-gitea"></i> --> Gitea
                 </a>
             </li>
             <li class="nav-item">
